--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <service android:name=".SongService" />
+        
         <activity
             android:screenOrientation="portrait"
             android:name="com.bartoshr.songstone.Main"
