--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,8 +14,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
-        <service android:name=".SongService" />
+        <service android:enabled="true" android:name=".SongService" />
         
+        <receiver android:name="RemoteControlReceiver">
+    		<intent-filter>
+        		<action android:name="android.intent.action.MEDIA_BUTTON" />
+   			 </intent-filter>
+		</receiver>
+                
         <activity
             android:screenOrientation="portrait"
             android:name="com.bartoshr.songstone.Main"
