--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,12 @@
         <receiver android:name="RemoteControlReceiver">
     		<intent-filter>
         		<action android:name="android.intent.action.MEDIA_BUTTON" />
+        		<action android:name="com.bartoshr.songstone.ACTION_PLAY" />
+            	<action android:name="com.bartoshr.songstone.ACTION_PAUSE" />
+            	<action android:name="com.bartoshr.songstone.ACTION_NEXT"/>
+            	<action android:name="com.bartoshr.songstone.ACTION_PREV"/>
+            	<action android:name="com.bartoshr.songstone.ACTION_FLOW"/>
+            	<category android:name="android.intent.category.DEFAULT" />
    			 </intent-filter>
 		</receiver>
                 
