--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.android.support:cardview-v7:21.0.+'
-    compile(name:'library', ext:'aar')
+    compile 'com.nononsenseapps:filepicker:2.0.5'
+    compile 'com.balysv:material-ripple:1.0.2'
 }
