--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.nononsenseapps:filepicker:2.0.5'
     compile 'com.balysv:material-ripple:1.0.2'
+    compile 'com.android.support:design:22.2.0'
 }
