--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name">
 
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -33,14 +33,14 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".receivers.ExternalBroadcastReceiver">
+        <receiver android:name=".ExternalBroadcastReceiver">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
             </intent-filter>
         </receiver>
 
-        <service android:name=".serivces.SongService" />
+        <service android:name=".SongService" />
 
     </application>
 
